fix saving goal entry page

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/saving/saving.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/saving/saving.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex w-100 flex-column m-2">
     <p-card header="Short Term Savings Goal">
       <div class="mb-1">
-        <app-saving-entry-form></app-saving-entry-form>
+        <app-saving-entry-form (updated)="savingGoalUpdated()" [savingGoal]="savingGoal"></app-saving-entry-form>
       </div>
     </p-card>
   </div>
