--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/mortgage-entry-form/mortgage-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/mortgage-entry-form/mortgage-entry-form.component.html
@@ -2,42 +2,42 @@
   <div class="d-flex flex-column">
     <div class="d-flex w-100 mb-1">
       <span class="p-float-label w-100 ml-1">
-        <p-inputNumber id="loanedAmount"
+        <p-inputNumber id="totalBalance"
                        [required]="true"
-                       [(ngModel)]="model.loanedAmount" name="loanedAmount"
+                       [(ngModel)]="model.totalBalance" name="totalBalance"
                        #amount="ngModel" class="w-100" styleClass="w-100"
                        prefix="$">
         </p-inputNumber>
-        <label for="loanedAmount">Loaned Amount</label>
+        <label for="totalBalance">Remaining Balance</label>
       </span>
       <span class="p-float-label w-100 ml-1">
-        <p-inputNumber id="currentBalance"
+        <p-inputNumber id="interestRate_Percent"
                        [required]="true"
-                       [(ngModel)]="model.currentBalance" name="currentBalance"
+                       [(ngModel)]="model.interestRate_Percent" name="interestRate_Percent"
                        #amount="ngModel" class="w-100" styleClass="w-100"
-                       prefix="$">
+                       suffix="%">
         </p-inputNumber>
-        <label for="currentBalance">Current Balance</label>
+        <label for="interestRate_Percent">Annual Interest Rate</label>
       </span>
     </div>
     <div class="d-flex w-100 mt-1">
       <span class="p-float-label w-100 ml-1">
-        <p-inputNumber id="annualInterestRate"
+        <p-inputNumber id="monthlyPayment"
                        [required]="true"
-                       [(ngModel)]="model.annualInterestRate" name="annualInterestRate"
+                       [(ngModel)]="model.monthlyPayment" name="monthlyPayment"
                        #amount="ngModel" class="w-100" styleClass="w-100"
-                       suffix="%">
+                       prefix="$">
         </p-inputNumber>
-        <label for="annualInterestRate">Annual Interest Rate</label>
+        <label for="monthlyPayment">Monthly Payment</label>
       </span>
       <span class="p-float-label w-100 ml-1">
-        <p-inputNumber id="loanDuration"
+        <p-inputNumber id="estimatedCurrentValue"
                        [required]="true"
-                       [(ngModel)]="model.loanDuration" name="loanDuration"
+                       [(ngModel)]="model.estimatedCurrentValue" name="estimatedCurrentValue"
                        #amount="ngModel" class="w-100" styleClass="w-100"
-                       suffix=" years">
+                       prefix="$">
         </p-inputNumber>
-        <label for="loanDuration">Loan Duration</label>
+        <label for="estimatedCurrentValue">Estimate Property Value</label>
       </span>
     </div>
   </div>
