--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/investment-entry-form/investment-entry-form.component.html
@@ -12,7 +12,7 @@
         <p-inputNumber id="currentBalance"
                        [required]="true"
                        [(ngModel)]="model.currentBalance" name="currentBalance"
-                       #amount="ngModel" class="w-100" styleClass="w-100"
+                       #currentBalance="ngModel" class="w-100" styleClass="w-100"
                        [minFractionDigits]="2" [maxFractionDigits]="2"
                        prefix="$">
         </p-inputNumber>
@@ -24,7 +24,7 @@
           <p-inputNumber id="monthlyPersonalContribution"
                          [required]="true"
                          [(ngModel)]="model.monthlyPersonalContribution" name="monthlyPersonalContribution"
-                         #amount="ngModel" class="w-100" styleClass="w-100"
+                         #monthlyPersonalContribution="ngModel" class="w-100" styleClass="w-100"
                          [minFractionDigits]="2" [maxFractionDigits]="2"
                          prefix="$">
           </p-inputNumber>
@@ -34,7 +34,7 @@
           <p-inputNumber id="monthlyEmployerContribution"
                          [required]="true"
                          [(ngModel)]="model.monthlyEmployerContribution" name="monthlyEmployerContribution"
-                         #amount="ngModel" class="w-100" styleClass="w-100"
+                         #monthlyEmployerContribution="ngModel" class="w-100" styleClass="w-100"
                          [minFractionDigits]="2" [maxFractionDigits]="2"
                          prefix="$">
           </p-inputNumber>
