--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
@@ -9,12 +9,16 @@
   </div>
   <div class="d-flex w-40 flex-column m-2">
     <p-card header="Total Cost of Mortgage" class="mb-1">
+      <p class="breakdown">${{totalMortgageCost | number: '.2-2'}}</p>
     </p-card>
     <p-card header="Total Cost of Interest" class="mb-1">
+      <p class="breakdown">${{totalMortgageInterestCost | number: '.2-2'}}</p>
     </p-card>
   </div>
   <div class="d-flex w-40 flex-column m-2">
-    <p-card header="Total Cost of Principal" class="mb-1">
+    <p-card header="Time to Payoff" class="mb-1">
+      <p class="breakdown" *ngIf="totalMortgageYears">{{totalMortgageYears}} years</p>
+      <p class="breakdown" *ngIf="totalMortgageMonths">{{totalMortgageMonths}} months</p>
     </p-card>
   </div>
 </div>
