--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
@@ -10,4 +10,10 @@
       </div>
     </p-card>
   </div>
+  <div class="d-flex w-40 flex-column m-2">
+    <p-card header="Time to Payoff" class="mb-1">
+      <p class="breakdown" *ngIf="totalDebtYears">{{totalDebtYears}} years</p>
+      <p class="breakdown" *ngIf="totalDebtMonths">{{totalDebtMonths}} months</p>
+    </p-card>
+  </div>
 </div>
