--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
@@ -11,6 +11,14 @@
     </p-card>
   </div>
   <div class="d-flex w-40 flex-column m-2">
+    <p-card header="Total Cost of Debt" class="mb-1">
+      <p class="breakdown">${{totalDebtCost | number: '.2-2'}}</p>
+    </p-card>
+    <p-card header="Total Cost of Interest" class="mb-1">
+      <p class="breakdown">${{totalDebtInterestCost | number: '.2-2'}}</p>
+    </p-card>
+  </div>
+  <div class="d-flex w-40 flex-column m-2">
     <p-card header="Time to Payoff" class="mb-1">
       <p class="breakdown" *ngIf="totalDebtYears">{{totalDebtYears}} years</p>
       <p class="breakdown" *ngIf="totalDebtMonths">{{totalDebtMonths}} months</p>
