update totals on mortgage or debt save

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex w-100 flex-column m-2">
     <p-card header="Mortgage">
       <div class="mb-1">
-        <app-mortgage-entry-form></app-mortgage-entry-form>
+        <app-mortgage-entry-form (updated)="updateMortgage()"></app-mortgage-entry-form>
       </div>
     </p-card>
   </div>
