--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/budget-listing/budget-listing.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/shared/budget-listing/budget-listing.component.html
@@ -12,6 +12,7 @@
     </p-listbox>
   </div>
   <div class="d-flex justify-content-between mt-2">
+    <button pButton class="p-button-danger" label="Delete" (click)="deleteBudget(selected)" [disabled]="!selected"></button>
     <button pButton class="p-button-secondary" label="Edit" (click)="editBudget()" [disabled]="!selected"></button>
     <button pButton label="Load" (click)="loadBudget()" [disabled]="!selected"></button>
   </div>
