--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -33,6 +33,10 @@
   </p-card>
 
 </div>
-<div class="d-flex w-100">
-  <p-card styleClass="m-2" class="mb-2 w-100" header="Do You Have Enough?"></p-card>
+<div class="d-flex w-100 mt-2">
+  <p-card class="w-100 mx-2" header="Do You Have Enough?">
+    <p class="breakdown">
+      ${{availableMonthlyNet  | number : '.2-2'}}
+    </p>
+  </p-card>
 </div>
