--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -16,7 +16,11 @@
             ${{(myMonthlyIncome - myMonthlyExpenses)  | number : '.2-2'}}
           </p>
         </p-card>
-        <p-card class="w-100 mx-2" header="Current Net Worth"></p-card>
+        <p-card class="w-100 mx-2" header="Current Net Worth">
+          <p class="breakdown">
+            ${{(myNetWorth)  | number : '.2-2'}}
+          </p>
+        </p-card>
     </div>
     <div class="d-flex flex-column">
       <div class="d-flex justify-content-between mt-2">
