--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -5,14 +5,16 @@
     <app-saving-chart></app-saving-chart>
     <div class="mt-4">
       <h3>Budget Allocation</h3>
-      <p-slider></p-slider>
+      <input type="text" pInputText [(ngModel)]="model.savingGoal" class="w-full" (change)="sliderEvent()"/>
+      <p-slider [(ngModel)]="model.savingGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isSavingDisabled" [max]="(savingContribution! + availableMonthlyNet)"></p-slider>
     </div>
   </p-card>
   <p-card styleClass="m-2" class="w-md-50" header="Investments">
     <app-investments-chart></app-investments-chart>
     <div class="mt-4">
       <h3>Budget Allocation</h3>
-      <p-slider></p-slider>
+      <input type="text" pInputText [(ngModel)]="model.investmentGoal" class="w-full" (change)="sliderEvent()"/>
+      <p-slider [(ngModel)]="model.investmentGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isInvestmentDisabled" [max]="(investmentContribution! + availableMonthlyNet)"></p-slider>
     </div>
   </p-card>
 
@@ -20,7 +22,8 @@
     <app-debt-chart></app-debt-chart>
     <div class="mt-4">
       <h3>Budget Allocation</h3>
-      <p-slider></p-slider>
+      <input type="text" pInputText [(ngModel)]="model.debtGoal" class="w-full" (change)="sliderEvent()"/>
+      <p-slider [(ngModel)]="model.debtGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isDebtDisabled" [max]="(debtContribution! + availableMonthlyNet)"></p-slider>
     </div>
   </p-card>
 
@@ -28,7 +31,8 @@
     <app-mortgage-chart></app-mortgage-chart>
     <div class="mt-4">
       <h3>Budget Allocation</h3>
-      <p-slider></p-slider>
+      <input type="text" pInputText [(ngModel)]="model.mortgageGoal" class="w-full" (change)="sliderEvent()"/>
+      <p-slider [(ngModel)]="model.mortgageGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isMortgageDisabled" [max]="(mortgageContribution! + availableMonthlyNet)"></p-slider>
     </div>
   </p-card>
 
