--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -5,8 +5,9 @@
     <app-saving-chart></app-saving-chart>
     <div class="mt-4">
       <h3>Budget Allocation</h3>
-      <input type="text" pInputText [(ngModel)]="model.savingGoal" class="w-full" (change)="sliderEvent()"/>
-      <p-slider [(ngModel)]="model.savingGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isSavingDisabled" [max]="(savingContribution! + availableMonthlyNet)"></p-slider>
+      <input type="text" pInputText [(ngModel)]="model.savingGoal" class="w-full" (change)="sliderEvent()" />
+      <p-slider *ngIf="(savingContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.savingGoal" class="w-full" (onSlideEnd)="sliderEvent()" [max]="(savingContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(savingContribution! + availableMonthlyNet) <= 0" class="w-full" [disabled]="true"></p-slider>
     </div>
   </p-card>
   <p-card styleClass="m-2" class="w-md-50" header="Investments">
@@ -14,7 +15,8 @@
     <div class="mt-4">
       <h3>Budget Allocation</h3>
       <input type="text" pInputText [(ngModel)]="model.investmentGoal" class="w-full" (change)="sliderEvent()"/>
-      <p-slider [(ngModel)]="model.investmentGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isInvestmentDisabled" [max]="(investmentContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(investmentContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.investmentGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isInvestmentDisabled" [max]="(investmentContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(investmentContribution! + availableMonthlyNet) <= 0" class="w-full" [disabled]="true"></p-slider>
     </div>
   </p-card>
 
@@ -23,7 +25,8 @@
     <div class="mt-4">
       <h3>Budget Allocation</h3>
       <input type="text" pInputText [(ngModel)]="model.debtGoal" class="w-full" (change)="sliderEvent()"/>
-      <p-slider [(ngModel)]="model.debtGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isDebtDisabled" [max]="(debtContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(debtContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.debtGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isDebtDisabled" [max]="(debtContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(debtContribution! + availableMonthlyNet) <= 0" class="w-full" [disabled]="true"></p-slider>
     </div>
   </p-card>
 
@@ -32,15 +35,19 @@
     <div class="mt-4">
       <h3>Budget Allocation</h3>
       <input type="text" pInputText [(ngModel)]="model.mortgageGoal" class="w-full" (change)="sliderEvent()"/>
-      <p-slider [(ngModel)]="model.mortgageGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isMortgageDisabled" [max]="(mortgageContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(mortgageContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.mortgageGoal" class="w-full" (onSlideEnd)="sliderEvent()" [disabled]="isMortgageDisabled" [max]="(mortgageContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(mortgageContribution! + availableMonthlyNet) <= 0" class="w-full" [disabled]="true" ></p-slider>
     </div>
   </p-card>
 
 </div>
 <div class="d-flex w-100 mt-2">
-  <p-card class="w-100 mx-2" header="Do You Have Enough?">
+  <p-card class="w-100 mx-2" header="Available Monthly Funds">
     <p class="breakdown">
-      ${{availableMonthlyNet  | number : '.2-2'}}
+      ${{availableMonthlyNet | number : '.2-2'}} / ${{availableFreeCash  | number : '.2-2'}}
+    </p>
+    <p class="breakdown">
+      Remaining/Available
     </p>
   </p-card>
 </div>
