--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -15,7 +15,7 @@
     <div class="mt-4">
       <h3>Budget Allocation</h3>
       <p-inputNumber [(ngModel)]="model.investmentGoal" class="w-100" styleClass="w-100" (change)="sliderEvent('investments')" [minFractionDigits]="2" [maxFractionDigits]="2" prefix="$"></p-inputNumber>
-      <p-slider *ngIf="(investmentContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.investmentGoal" class="w-100" [step]="0.01" (onSlideEnd)="sliderEvent('investments')" [disabled]="isInvestmentDisabled" [max]="(investmentContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(investmentContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.investmentGoal" class="w-100" [step]="0.01" (onSlideEnd)="sliderEvent('investments')" [max]="(investmentContribution! + availableMonthlyNet)"></p-slider>
       <p-slider *ngIf="(investmentContribution! + availableMonthlyNet) <= 0" class="w-100" [disabled]="true"></p-slider>
     </div>
   </p-card>
@@ -25,7 +25,7 @@
     <div class="mt-4">
       <h3>Budget Allocation</h3>
       <p-inputNumber [(ngModel)]="model.debtGoal" class="w-100" styleClass="w-100" (change)="sliderEvent('debt')"  [minFractionDigits]="2" [maxFractionDigits]="2" prefix="$"></p-inputNumber>
-      <p-slider *ngIf="(debtContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.debtGoal" class="w-100" [step]="0.01" (onSlideEnd)="sliderEvent('debt')" [disabled]="isDebtDisabled" [max]="(debtContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(debtContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.debtGoal" class="w-100" [step]="0.01" (onSlideEnd)="sliderEvent('debt')" [max]="(debtContribution! + availableMonthlyNet)"></p-slider>
       <p-slider *ngIf="(debtContribution! + availableMonthlyNet) <= 0" class="w-100" [disabled]="true"></p-slider>
     </div>
   </p-card>
@@ -35,7 +35,7 @@
     <div class="mt-4">
       <h3>Budget Allocation</h3>
       <p-inputNumber [(ngModel)]="model.mortgageGoal" class="w-100" styleClass="w-100" (change)="sliderEvent('mortgage')" [minFractionDigits]="2" [maxFractionDigits]="2" prefix="$"></p-inputNumber>
-      <p-slider *ngIf="(mortgageContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.mortgageGoal" class="w-100" [step]="0.01" (onSlideEnd)="sliderEvent('mortgage')" [disabled]="isMortgageDisabled" [max]="(mortgageContribution! + availableMonthlyNet)"></p-slider>
+      <p-slider *ngIf="(mortgageContribution! + availableMonthlyNet) > 0" [(ngModel)]="model.mortgageGoal" class="w-100" [step]="0.01" (onSlideEnd)="sliderEvent('mortgage')" [max]="(mortgageContribution! + availableMonthlyNet)"></p-slider>
       <p-slider *ngIf="(mortgageContribution! + availableMonthlyNet) <= 0" class="w-100" [disabled]="true" ></p-slider>
     </div>
   </p-card>
@@ -45,18 +45,18 @@
   <p-card class="w-100 mx-2" header="Available Monthly Funds">
     <div class="d-flex justify-content-center">
       <div class="d-flex flex-column">
-        <p class="breakdown text-center">
+        <p class="breakdown text-center m-0">
           ${{availableMonthlyNet | number : '.2-2'}}
         </p>
         <small class="text-center">Remaining</small>
       </div>
       <div class="d-flex flex-column">
-        <p class="breakdown mx-2">
+        <p class="breakdown mx-2 my-0">
           /
         </p>
       </div>
       <div class="d-flex flex-column">
-        <p class="breakdown text-center">
+        <p class="breakdown text-center m-0">
           ${{availableFreeCash  | number : '.2-2'}}
         </p>
         <small class="text-center">Available</small>
