--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -43,6 +43,10 @@
 </div>
 <div class="d-flex w-100 mt-2">
   <p-card class="w-100 mx-2" header="Available Monthly Funds">
+    <div class="d-flex">
+      <p-checkbox id="rolloverContributions" [(ngModel)]="rolloverContributions" [binary]="true" inputId="binary"(onChange)="toggleRolloverContributions()"></p-checkbox>
+      <label class="mx-2" for="rolloverContributions">Rollover left over contributions to Investments?</label>
+    </div>
     <div class="d-flex justify-content-center">
       <div class="d-flex flex-column">
         <p class="breakdown text-center m-0">
