#24 #277 Implement initial Net Value chart

--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/home/pages/home/home.component.html
@@ -24,7 +24,9 @@
     </div>
     <div class="d-flex flex-column">
       <div class="d-flex justify-content-between mt-2">
-        <p-card class="w-100 mx-2" header="Net Worth Chart"></p-card>
+        <p-card class="w-100 mx-2" header="Net Worth Chart">
+          <app-net-worth-chart></app-net-worth-chart>
+        </p-card>
         <p-card class="w-100 mx-2" header="Short Term Savings Chart">
           <app-saving-chart></app-saving-chart>
         </p-card>
